fix z-index

--- a/stylesheets/radar.css
+++ b/stylesheets/radar.css
@@ -12,7 +12,7 @@
     display: flex;
     top: 15px;
     left: 0;
-    z-index: 10000;
+    z-index: 9997;
 }
 
 .box {
